--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Ignore node_modules directory in the frontend project
+frontend/node_modules
+backend/node_modules
+
+
 # Logs
 logs
 *.log
@@ -7,7 +12,6 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
 dist
 dist-ssr
 *.local
