env updated and removed

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ MONGODB_URI = mongodb+srv://jjobinshaji:X87DP8qmgtfDsOrg@cluster0.ehb6hj7.mongod
 PORT = 3000
 JWT_SECRET = your-super-secret-jwt-key-change-in-production-make-it-long-and-random
 JWT_EXPIRES_IN = 7d
+GOOGLE_CLIENT_ID = your-google-client-id-from-google-cloud-console
+GOOGLE_CLIENT_SECRET = your-google-client-secret-from-google-cloud-console
