--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^8.17.0",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "validator": "^13.15.15"
+    "validator": "^13.15.15",
+    "yahoo-finance2": "^2.13.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
