--- a/backend/package.json
+++ b/backend/package.json
@@ -26,12 +26,13 @@
     "mongoose": "^8.17.0",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "razorpay": "^2.9.6",
     "validator": "^13.15.15",
     "yahoo-finance2": "^2.13.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
     "supertest": "^6.3.3"
   }
 }
