--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "google-auth-library": "^10.2.1",
@@ -26,9 +27,8 @@
     "mongoose": "^8.17.0",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "razorpay": "^2.9.6",
-    "validator": "^13.15.15",
-    "yahoo-finance2": "^2.13.3"
+    "playwright": "^1.49.0",
+    "razorpay": "^2.9.6"
   },
   "devDependencies": {
     "jest": "^29.7.0",
