--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
     "test": "jest --testTimeout=10000",
     "test:watch": "jest --watch --testTimeout=10000",
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "npx playwright install --with-deps chromium"
+
   },
   "keywords": [],
   "author": "",
